2010-10-29  Eli Zaretskii  <eliz@gnu.org>

	* emacs.c (main): Call syms_of_filelock unconditionally.

	* filelock.c (syms_of_filelock): Move out of #ifdef CLASH_DETECTION
	clause, but keep part of it conditioned on CLASH_DETECTION.

2010-10-29  Glenn Morris  <rgm@gnu.org>

	* nsfns.m (Fx-display-save-under, Fx-open-connection)
	(Fxw-color-defined-p, Fxw-display-color-p, Fx-show-tip):
	* w32fns.c (Fxw_color_defined_p, Fx_open_connection):
	* xfns.c (Fxw_color_defined_p, Fx_open_connection):
	Sync docs between X, W32, NS.

	* buffer.c (syms_of_buffer) <abbrev-mode, transient-mark-mode>:
	* frame.c (syms_of_frame) <tool-bar-mode>: Move doc here from Lisp.

2010-10-26  Juanma Barranquero  <lekktu@gmail.com>

	* eval.c (init_eval_once): Set max_lisp_eval_depth to 600;
	otherwise, bootstrapping on Windows fails to compile macroexp.el.

2010-10-26  Eli Zaretskii  <eliz@gnu.org>

	* cmds.c (internal_self_insert): Don't insert if argument N is
	zero or negative.  (Bug#7281)

2010-10-26  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (qttip_cb): Set title to empty for ATK (Bug#7278).

2010-10-25  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (SOME_MACHINE_LISP): Remove easymenu.elc.

2010-10-24  Glenn Morris  <rgm@gnu.org>

	* w32fns.c (Fx_synchronize, Fx_change_window_property)
	(Fx_window_property, Fx_file_dialog):
	* xfns.c (Fx_synchronize, Fx_change_window_property)
	(Fx_window_property, Fx_file_dialog): Sync docs between w32 and X.

2010-10-24  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.c (x_connection_closed): Kill Emacs unconditionally.

2010-10-24  Eli Zaretskii  <eliz@gnu.org>

	* frame.c (Fframep, Fwindow_system): Deprecate use as a predicate.

	* dispnew.c (syms_of_display) <initial-window-system, window-system>:
	Deprecate use as a boolean flag.

2010-10-24  Jim Meyering  <jim@meyering.net>

	* emacs.c (argmatch): Don't treat "--" as "--chdir".

2010-10-24  Glenn Morris  <rgm@gnu.org>

	* w16select.c (syms_of_win16select) <selection-coding-system>: